--- a/admin/config.yml
+++ b/admin/config.yml
@@ -11,7 +11,7 @@ backend:
 # Uncomment below to enable drafts
 publish_mode: editorial_workflow
 
-media_folder: "static/img" # Media files will be stored in the repo under images/uploads
+media_folder: "assets/images" # Media files will be stored in the repo under images/uploads
 
 collections:
   # Blog posts
