--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "scripts": {
     "start": "yarn run dev",
     "build": "ELEVENTY_ENV=production yarn eleventy",
-    "dev": "ELEVENTY_ENV=development yarn eleventy --serve",
+    "dev": "ELEVENTY_ENV=development yarn eleventy --serve --quiet",
     "debug": "DEBUG=* yarn eleventy"
   },
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^0.8.2"
+    "@11ty/eleventy": "^0.8.2",
+    "eslint": "^5.16.0"
   },
   "dependencies": {
     "@11ty/eleventy-plugin-rss": "^1.0.6",
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.1",
+    "axios": "^0.18.0",
     "clean-css": "^4.2.1",
     "debug": "^4.1.1",
+    "dotenv": "^7.0.0",
     "eleventy-plugin-reading-time": "^0.0.1",
     "html-minifier": "^3.5.21",
+    "lodash.has": "^4.5.2",
     "luxon": "^1.12.1",
     "uglify-es": "^3.3.9"
   }
