--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "yarn run dev",
     "build": "ELEVENTY_ENV=production yarn eleventy",
-    "dev": "ELEVENTY_ENV=development yarn eleventy",
+    "dev": "ELEVENTY_ENV=development yarn eleventy --serve",
     "debug": "DEBUG=* yarn eleventy"
   },
   "license": "MIT",
