--- a/admin/config.yml
+++ b/admin/config.yml
@@ -25,7 +25,9 @@ collections:
     fields: # The fields for each document, usually in front matter
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Social Description", name: "socialDescription", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
+
 
   # Pages e.g. About
   - name: "pages"
@@ -37,4 +39,5 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Permalink", name: "permalink", widget: "string" }
+      - { label: "Social Description", name: "socialDescription", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
