--- a/admin/config.yml
+++ b/admin/config.yml
@@ -25,7 +25,7 @@ collections:
     fields: # The fields for each document, usually in front matter
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Social Description", name: "socialDescription", widget: "string" }
+      - { label: "Social Description", name: "socialDescription", widget: "string", pattern: [".{1,155}", "Maximum of 155 characters"] }
       - { label: "Body", name: "body", widget: "markdown" }
 
 
