--- a/admin/config.yml
+++ b/admin/config.yml
@@ -13,7 +13,7 @@ publish_mode: editorial_workflow
 
 # site_url: https://edjohnsonwilliams.co.uk
 
-media_folder: "assets/images" # Media files will be stored in the repo under images/uploads
+media_folder: "/assets/images"
 
 collections:
   # Blog posts
