--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
-    "eslint": "^6.8.0"
   },
   "dependencies": {
     "@11ty/eleventy-plugin-rss": "^1.0.7",
@@ -21,7 +20,6 @@
     "html-minifier": "^4.0.0",
     "lodash.has": "^4.5.2",
     "luxon": "^1.22.0",
-    "markdown-it-footnote": "^3.0.2",
-    "uglify-es": "^3.3.9"
+    "markdown-it-footnote": "^3.0.2"
   }
 }
