--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^0.10.0",
+    "@11ty/eleventy": "^0.10.0"
   },
   "dependencies": {
     "@11ty/eleventy-plugin-rss": "^1.0.7",
