--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "description": "Ed Johnson-Williams' personal website",
   "scripts": {
     "start": "yarn run dev",
-    "build": "ELEVENTY_ENV=production yarn eleventy",
-    "dev": "ELEVENTY_ENV=development yarn eleventy --serve",
+    "build": "cross-env ELEVENTY_ENV=production yarn eleventy",
+    "dev": "cross-env ELEVENTY_ENV=development yarn eleventy --serve",
     "debug": "DEBUG=* yarn eleventy"
   },
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^0.10.0"
+    "@11ty/eleventy": "^0.10.0",
+    "cross-env": "^7.0.2"
   },
   "dependencies": {
     "@11ty/eleventy-plugin-rss": "^1.0.7",
