--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
     "clean-css": "^4.2.3",
-    "cross-env": "^7.0.2"
+    "cross-env": "^7.0.2",
+    "terser": "^4.6.9"
   },
   "dependencies": {
     "@11ty/eleventy-plugin-rss": "^1.0.7",
