--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "xml2json": "^0.12.0"
   },
   "dependencies": {
+    "@11ty/eleventy-cache-assets": "^2.0.2",
     "@11ty/eleventy-plugin-rss": "^1.0.7",
-    "axios": "^0.19.2",
     "debug": "^4.1.1",
     "dotenv": "^8.1.0",
     "eleventy-plugin-reading-time": "^0.0.1",
