--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
+    "acorn": "^7.1.1",
+    "alpinejs": "^2.3.1",
     "clean-css": "^4.2.3",
     "cross-env": "^7.0.2",
     "terser": "^4.6.12",
-    "xml2json": "^0.12.0",
-    "acorn": "^5.7.4"
+    "xml2json": "^0.12.0"
   },
   "dependencies": {
     "@11ty/eleventy-cache-assets": "^2.0.2",
