--- a/admin/config.yml
+++ b/admin/config.yml
@@ -43,7 +43,7 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Layout", name: "layout", widget: "string" }
-      # - { label: "Tags", name: "tags", widget: "list" }
+      - { label: "Tags", name: "tags", widget: "list" }
       - { label: "Permalink", name: "permalink", widget: "string" }
       - {
           label: "Social Description",
