--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "npm run dev"
   },
   "devDependencies": {
-    "cssnano": "^4.1.10"
+    "cssnano": "^4.1.10",
+    "snowpack-plugin-optimize": "^0.5.0"
   },
   "dependencies": {
     "@11ty/eleventy": "^0.11.1",
