--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -32,7 +32,12 @@ collections:
           pattern: [".{0,155}", "Maximum of 155 characters"],
           default: "Ed Johnson-Williams' blog",
         }
-      - { label: "Tags", name: "tags", widget: "list" }
+      - {
+          label: "Tags",
+          name: "tags",
+          widget: "list",
+          field: { label: Tag, name: tag, widget: string },
+        }
       - { label: "Body", name: "body", widget: "markdown" }
 
   # Pages e.g. About
